--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-08 16:07 -->
+<!-- 2022-11-08 21:47 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -46,47 +46,47 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgc2e8627">1. 妙妙文章</a>
+<li><a href="#orgb3b415f">1. 妙妙文章</a>
 <ul>
-<li><a href="#org306721a">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
-<li><a href="#org22fd842">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#org9a7f331">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#org763b31f">1.4. 关于编辑器</a></li>
-<li><a href="#org3ed82f4">1.5. 关于代码</a>
+<li><a href="#org237201a">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
+<li><a href="#orge7cc188">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#orgd56c53c">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#org2d2dae2">1.4. 关于编辑器</a></li>
+<li><a href="#org38cd8fe">1.5. 关于代码</a>
 <ul>
-<li><a href="#orgb9931a4">1.5.1. Lisp</a></li>
+<li><a href="#orgce51fb5">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#org579a2c6">1.6. 关于CPU</a></li>
-<li><a href="#orgb851d37">1.7. 关于算法</a>
+<li><a href="#org6c5dc7a">1.6. 关于CPU</a></li>
+<li><a href="#orgbb35612">1.7. 关于算法</a>
 <ul>
-<li><a href="#orgc35d936">1.7.1. 关于随机</a></li>
+<li><a href="#orgb4667ea">1.7.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#org99f304e">1.8. 关于AI</a></li>
-<li><a href="#orgd5a17e6">1.9. 关于软件</a>
+<li><a href="#orga4e19fa">1.8. 关于AI</a></li>
+<li><a href="#orge723ce5">1.9. 关于软件</a>
 <ul>
-<li><a href="#org18a8d28">1.9.1. SQLite</a></li>
+<li><a href="#org6617b44">1.9.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#org7e42e0c">1.10. 关于workflow</a></li>
+<li><a href="#org2e16403">1.10. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#orge21eb22">2. 棒棒视频</a>
+<li><a href="#orgd8b7fc5">2. 棒棒视频</a>
 <ul>
-<li><a href="#orgc01d713">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org20503f6">2.2. 各种剧</a></li>
-<li><a href="#orgba7d853">2.3. 电影</a></li>
+<li><a href="#org1980e95">2.1. Veritasium 真理元素</a></li>
+<li><a href="#orgbf80e8a">2.2. 各种剧</a></li>
+<li><a href="#org23d1d7e">2.3. 电影</a></li>
 </ul>
 </li>
-<li><a href="#org7475440">3. 快乐游戏</a></li>
-<li><a href="#org19a2dce">4. 宝藏博主</a></li>
-<li><a href="#org5ffe10b">5. 有意思的</a>
+<li><a href="#org378a213">3. 快乐游戏</a></li>
+<li><a href="#org87aa3d9">4. 宝藏博主</a></li>
+<li><a href="#orge20bf56">5. 有意思的</a>
 <ul>
-<li><a href="#orga52682b">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#org6cd0183">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#org00ef589">6. 我想玩的</a></li>
+<li><a href="#orgafb4cad">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -95,8 +95,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-orgc2e8627" class="outline-2">
-<h2 id="orgc2e8627"><span class="section-number-2">1.</span> <a href="#orgc2e8627">妙妙文章</a></h2>
+<div id="outline-container-orgb3b415f" class="outline-2">
+<h2 id="orgb3b415f"><span class="section-number-2">1.</span> <a href="#orgb3b415f">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -433,7 +433,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="org82813d2">
+<figure id="orgb684dea">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -497,8 +497,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-org306721a" class="outline-3">
-<h3 id="org306721a"><span class="section-number-3">1.1.</span> <a href="#org306721a">关于死亡 &#x2014; 让世界知道我来过</a></h3>
+<div id="outline-container-org237201a" class="outline-3">
+<h3 id="org237201a"><span class="section-number-3">1.1.</span> <a href="#org237201a">关于死亡 &#x2014; 让世界知道我来过</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -539,8 +539,8 @@ Take Umbrage.  Violators Will &#x2026;
 </div>
 </div>
 
-<div id="outline-container-org22fd842" class="outline-3">
-<h3 id="org22fd842"><span class="section-number-3">1.2.</span> <a href="#org22fd842">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-orge7cc188" class="outline-3">
+<h3 id="orge7cc188"><span class="section-number-3">1.2.</span> <a href="#orge7cc188">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><p>
@@ -570,8 +570,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-org9a7f331" class="outline-3">
-<h3 id="org9a7f331"><span class="section-number-3">1.3.</span> <a href="#org9a7f331">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-orgd56c53c" class="outline-3">
+<h3 id="orgd56c53c"><span class="section-number-3">1.3.</span> <a href="#orgd56c53c">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -605,8 +605,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-org763b31f" class="outline-3">
-<h3 id="org763b31f"><span class="section-number-3">1.4.</span> <a href="#org763b31f">关于编辑器</a></h3>
+<div id="outline-container-org2d2dae2" class="outline-3">
+<h3 id="org2d2dae2"><span class="section-number-3">1.4.</span> <a href="#org2d2dae2">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><p>
@@ -622,8 +622,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-org3ed82f4" class="outline-3">
-<h3 id="org3ed82f4"><span class="section-number-3">1.5.</span> <a href="#org3ed82f4">关于代码</a></h3>
+<div id="outline-container-org38cd8fe" class="outline-3">
+<h3 id="org38cd8fe"><span class="section-number-3">1.5.</span> <a href="#org38cd8fe">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don't read code like it's a
@@ -648,8 +648,8 @@ future.</li>
 </ul>
 </div>
 
-<div id="outline-container-orgb9931a4" class="outline-4">
-<h4 id="orgb9931a4"><span class="section-number-4">1.5.1.</span> <a href="#orgb9931a4">Lisp</a></h4>
+<div id="outline-container-orgce51fb5" class="outline-4">
+<h4 id="orgce51fb5"><span class="section-number-4">1.5.1.</span> <a href="#orgce51fb5">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -672,8 +672,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-org579a2c6" class="outline-3">
-<h3 id="org579a2c6"><span class="section-number-3">1.6.</span> <a href="#org579a2c6">关于CPU</a></h3>
+<div id="outline-container-org6c5dc7a" class="outline-3">
+<h3 id="org6c5dc7a"><span class="section-number-3">1.6.</span> <a href="#org6c5dc7a">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><p>
@@ -688,8 +688,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </div>
 </div>
 
-<div id="outline-container-orgb851d37" class="outline-3">
-<h3 id="orgb851d37"><span class="section-number-3">1.7.</span> <a href="#orgb851d37">关于算法</a></h3>
+<div id="outline-container-orgbb35612" class="outline-3">
+<h3 id="orgbb35612"><span class="section-number-3">1.7.</span> <a href="#orgbb35612">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -708,8 +708,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-orgc35d936" class="outline-4">
-<h4 id="orgc35d936"><span class="section-number-4">1.7.1.</span> <a href="#orgc35d936">关于随机</a></h4>
+<div id="outline-container-orgb4667ea" class="outline-4">
+<h4 id="orgb4667ea"><span class="section-number-4">1.7.1.</span> <a href="#orgb4667ea">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-7-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -723,8 +723,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org99f304e" class="outline-3">
-<h3 id="org99f304e"><span class="section-number-3">1.8.</span> <a href="#org99f304e">关于AI</a></h3>
+<div id="outline-container-orga4e19fa" class="outline-3">
+<h3 id="orga4e19fa"><span class="section-number-3">1.8.</span> <a href="#orga4e19fa">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -734,8 +734,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgd5a17e6" class="outline-3">
-<h3 id="orgd5a17e6"><span class="section-number-3">1.9.</span> <a href="#orgd5a17e6">关于软件</a></h3>
+<div id="outline-container-orge723ce5" class="outline-3">
+<h3 id="orge723ce5"><span class="section-number-3">1.9.</span> <a href="#orge723ce5">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -746,8 +746,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-org18a8d28" class="outline-4">
-<h4 id="org18a8d28"><span class="section-number-4">1.9.1.</span> <a href="#org18a8d28">SQLite</a></h4>
+<div id="outline-container-org6617b44" class="outline-4">
+<h4 id="org6617b44"><span class="section-number-4">1.9.1.</span> <a href="#org6617b44">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-9-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -761,8 +761,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org7e42e0c" class="outline-3">
-<h3 id="org7e42e0c"><span class="section-number-3">1.10.</span> <a href="#org7e42e0c">关于workflow</a></h3>
+<div id="outline-container-org2e16403" class="outline-3">
+<h3 id="org2e16403"><span class="section-number-3">1.10.</span> <a href="#org2e16403">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-10">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -772,8 +772,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orge21eb22" class="outline-2">
-<h2 id="orge21eb22"><span class="section-number-2">2.</span> <a href="#orge21eb22">棒棒视频</a></h2>
+<div id="outline-container-orgd8b7fc5" class="outline-2">
+<h2 id="orgd8b7fc5"><span class="section-number-2">2.</span> <a href="#orgd8b7fc5">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -827,11 +827,13 @@ Practical, but also works on the human level in this case.
 <li><a href="https://www.bilibili.com/video/BV1p14y1h7uL">充电宝宇宙，漫威看了都说牛【值不值得买第571期】</a> 为醋包饺子的典范,
 把充电宝当成五号电池用, 就是性价比太低了</li>
 <li><a href="https://www.bilibili.com/video/BV1VD4y1t7Qu">两亿老年人，困在厕所里</a> 适老化改造任重而道远 👴👵</li>
+<li><a href="https://www.bilibili.com/video/BV1He4y1B73N">看到这3000个落选国旗，才知道我们的国旗有多强！！！【全网首个国旗解读】</a>
+五星红旗确实好看 🇨🇳</li>
 </ul>
 </div>
 
-<div id="outline-container-orgc01d713" class="outline-3">
-<h3 id="orgc01d713"><span class="section-number-3">2.1.</span> <a href="#orgc01d713">Veritasium 真理元素</a></h3>
+<div id="outline-container-org1980e95" class="outline-3">
+<h3 id="org1980e95"><span class="section-number-3">2.1.</span> <a href="#org1980e95">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You've Never Heard Of</a>
@@ -856,8 +858,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org20503f6" class="outline-3">
-<h3 id="org20503f6"><span class="section-number-3">2.2.</span> <a href="#org20503f6">各种剧</a></h3>
+<div id="outline-container-orgbf80e8a" class="outline-3">
+<h3 id="orgbf80e8a"><span class="section-number-3">2.2.</span> <a href="#orgbf80e8a">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -881,8 +883,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgba7d853" class="outline-3">
-<h3 id="orgba7d853"><span class="section-number-3">2.3.</span> <a href="#orgba7d853">电影</a></h3>
+<div id="outline-container-org23d1d7e" class="outline-3">
+<h3 id="org23d1d7e"><span class="section-number-3">2.3.</span> <a href="#org23d1d7e">电影</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -908,7 +910,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://movie.douban.com/subject/19899707/">驯龙高手3</a> (再见~)
 </p>
 
-<figure id="org52e7bc1">
+<figure id="orgdd6505c">
 <img src="./index/dragon3.jpg" alt="dragon3.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -925,8 +927,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org7475440" class="outline-2">
-<h2 id="org7475440"><span class="section-number-2">3.</span> <a href="#org7475440">快乐游戏</a></h2>
+<div id="outline-container-org378a213" class="outline-2">
+<h2 id="org378a213"><span class="section-number-2">3.</span> <a href="#org378a213">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -956,8 +958,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org19a2dce" class="outline-2">
-<h2 id="org19a2dce"><span class="section-number-2">4.</span> <a href="#org19a2dce">宝藏博主</a></h2>
+<div id="outline-container-org87aa3d9" class="outline-2">
+<h2 id="org87aa3d9"><span class="section-number-2">4.</span> <a href="#org87aa3d9">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -968,7 +970,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa's Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="org2b74ab1">
+<figure id="org64cb7a3">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -976,8 +978,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org5ffe10b" class="outline-2">
-<h2 id="org5ffe10b"><span class="section-number-2">5.</span> <a href="#org5ffe10b">有意思的</a></h2>
+<div id="outline-container-orge20bf56" class="outline-2">
+<h2 id="orge20bf56"><span class="section-number-2">5.</span> <a href="#orge20bf56">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -1009,8 +1011,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-orga52682b" class="outline-3">
-<h3 id="orga52682b"><span class="section-number-3">5.1.</span> <a href="#orga52682b">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-org6cd0183" class="outline-3">
+<h3 id="org6cd0183"><span class="section-number-3">5.1.</span> <a href="#org6cd0183">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -1022,8 +1024,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-org00ef589" class="outline-2">
-<h2 id="org00ef589"><span class="section-number-2">6.</span> <a href="#org00ef589">我想玩的</a></h2>
+<div id="outline-container-orgafb4cad" class="outline-2">
+<h2 id="orgafb4cad"><span class="section-number-2">6.</span> <a href="#orgafb4cad">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -1045,8 +1047,8 @@ Always check your friendship before terminating it.  hhhh</li>
 <hr><table class="postamble">
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
-  <tr><td class="org-right">Modified</td><td class="org-left">2022-11-08 16:06</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-08 16:07</td></tr>
+  <tr><td class="org-right">Modified</td><td class="org-left">2022-11-08 21:46</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-08 21:47</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
